@@ -94,6 +94,9 @@ public class TfTestLauncherTest {
                                 EasyMock.endsWith("/java"),
                                 (String) EasyMock.anyObject(),
                                 EasyMock.eq("--add-opens=java.base/java.nio=ALL-UNNAMED"),
+                                EasyMock.eq(
+                                        "--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED"),
+                                EasyMock.eq("--add-opens=java.base/java.io=ALL-UNNAMED"),
                                 EasyMock.eq("-cp"),
                                 (String) EasyMock.anyObject(),
                                 EasyMock.eq("com.android.tradefed.command.CommandRunner"),
